--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,17 +1,18 @@
 .button {
-    width: 150px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: $main-color;
-    border: none;
-    color: #ffffff;
-    font-size: 12px;
-    font-weight: 500;
-    text-transform: uppercase;
-    &_main {
-        margin-top: 67px;
-        width: 300px;
-        height: 50px;
-        font-size: 16px;
-    }
+  width: 153px;
+  height: 32px;
+  border-radius: 5px;
+  background-color: $main-color;
+  border: none;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  &_main {
+    margin-top: 65px;
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+  }
 }
