--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,36 +1,38 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__logo {
+    width: 250px;
+    img {
+      width: 100%;
+    }
+  }
+  &__official {
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 12px;
+    text-align: center;
+    span {
+      display: block;
+      font-weight: 500;
+      font-size: 18px;
+    }
+  }
+  &__phone {
+    display: block;
+    font-weight: 700;
+    font-size: 18px;
+    color: #ffffff;
+  }
+  :hover {
+    transition: all 0.5s;
+    color: rgb(165, 231, 171);
+    text-decoration: none;
+  }
+  &__contacts {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    &__logo {
-        width: 250px;
-        img {
-            width: 100%;
-        }
-    }
-    &__official {
-        color: #ffffff;
-        font-size: 12px;
-        font-weight: 500;
-        text-align: center;
-        span {
-            display: block;
-            font-size: 18px;
-        }
-    }
-    &__phone {
-        display: block;
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: 700;
-        &:hover {
-            color: #fff;
-            text-decoration: none;
-        }
-    }
-    &__contacts {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
