--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,55 +1,63 @@
 .promo {
-    min-height: 650px;
-    padding: 21px 0 93px 0;
-    background: url(../img/main.jpg) center (center/cover) no-repeat;
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-top: 90px;
+  min-height: 650px;
+  padding: 21px 0 93px 0;
+  background: url(../../img/main.jpg) center (center/cover) no-repeat;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
+  }
+  &__header {
+    font-weight: 700;
+    font-size: 42px;
+    text-align: right;
+    text-transform: uppercase;
+    line-height: 42px;
+    color: #ffffff;
+  }
+  &__subheader {
+    margin-top: 17px;
+    font-weight: 500;
+    font-size: 24px;
+    text-align: right;
+    text-transform: uppercase;
+    color: #ffffff;
+    line-height: 24px;
+  }
+  &__icons {
+    margin-top: 65px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__icon {
+    width: 106px;
+    text-align: center;
+    font-style: 14px;
+    font-weight: 500;
+    color: #ffffff;
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
     }
-    &__header {
-        color: #ffffff;
-        font-size: 42px;
-        font-weight: 700;
-        text-transform: uppercase;
-        line-height: 42px;
+  }
+  &__link {
+    margin-top: 18px;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: right;
+    color: #ffffff;
+    a {
+      color: #ffffff;
+      text-transform: uppercase;
+      text-decoration: underline;
     }
-    &__subheader {
-        margin-top: 17px;
-        color: #ffffff;
-        font-size: 24px;
-        line-height: 24px;
-        font-weight: 500;
-        text-transform: uppercase;
+    :hover {
+      transition: all 0.5s;
+      color: rgb(165, 231, 171);
+      text-decoration: none;
     }
-    &__icons {
-        margin-top: 65px;
-        width: 425px;
-        display: flex;
-        justify-content: space-between;
-    }
-    &__icon {
-        width: 108px;
-        text-align: center;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-        img {
-            display: block;
-            margin: 0 auto;
-            margin-bottom: 20px;
-        }
-    }
-    &__link {
-        color: #ffffff;
-        font-size: 16px;
-        font-weight: 500;
-        margin-top: 18px;
-        a {
-            color: #ffffff;
-            text-transform: uppercase;
-            text-decoration: underline;
-        }
-    }
+  }
 }
