--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,15 @@
-@import 'base/variables';
+@import "base/variables";
 * {
-    font-family: 'Museo Sans Cyrl', sans-serif;
+  font-family: "Museo Sans Cyrl", sans-serif;
 }
 .container {
-    max-width: 950px;
-    margin: 0 auto;
+  max-width: 950px;
+  margin: 0 auto;
 }
-@import 'blocks/promo';
-@import 'blocks/header.scss';
-@import 'blocks/buttons';
-@import 'blocks/advantages';
-@import 'blocks/titles';
+// oskal
+
+@import "blocks/promo";
+@import "blocks/header";
+@import "blocks/buttons";
+@import "blocks/advantages";
+@import "blocks/titles";
