--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -1,6 +1,13 @@
 .title {
-    color: #0d0d0d;
-    font-size: 30px;
+  color: #0d0d0d;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  &_left {
     font-weight: 700;
-    text-align: center;
+    font-size: 36px;
+    text-align: left;
+    color: white;
+  }
 }
