--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,12 +38,20 @@
   }
   &__content {
     margin-top: 60px;
+    display: none;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    &_active {
+      display: flex;
+    }
   }
   &-item {
     width: 303px;
     min-height: 442px;
     border: 2px solid #e8e8e8;
     padding: 20px 20px 26px 20px;
+    overflow: hidden;
+    margin-bottom: 20px;
     img {
       display: block;
       margin: 0 auto;
@@ -72,6 +80,7 @@
       font-size: 14px;
       line-height: 14px;
       text-align: center;
+      text-transform: uppercase;
       text-decoration-line: underline;
       color: $main_color;
       &:hover {
@@ -101,6 +110,67 @@
       font-size: 20px;
       line-height: 20px;
       color: #050505;
+    }
+    &__wrapper {
+      display: flex;
+      width: calc(200% + 40px);
+    }
+    &__content {
+      width: 50%;
+      margin-right: 0px;
+      transform: translateX(-100%);
+      transition: 0.5s all;
+      &_active {
+        transform: translateX(0%);
+        margin-right: 20px;
+      }
+    }
+    &__list {
+      position: relative;
+      width: 50%;
+      margin-left: 20px;
+      transform: translateX(0%);
+      padding-right: 20px;
+      transition: 0.5s all;
+      padding-left: 19px;
+      margin-bottom: 0;
+      list-style-type: none;
+      &_active {
+        transform: translateX(-100%);
+        margin-left: 0px;
+      }
+      li {
+        position: relative;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 21px;
+        color: #555555;
+        margin-bottom: 17px;
+        &:before {
+          content: "";
+          position: absolute;
+          width: 5px;
+          height: 5px;
+          background-color: $main-color;
+          left: -14px;
+          top: 7px;
+        }
+      }
+    }
+    &__back {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(calc(-50% - 19px));
+      display: block;
+      color: $main-color;
+      font-size: 14px;
+      font-weight: 500;
+      text-decoration: underline;
+      text-transform: uppercase;
+      &:hover {
+        color: $main-color;
+      }
     }
   }
 }
