--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,13 @@
     text-align: left;
     color: #ffffff;
   }
+  .error {
+    border: 1px solid red;
+  }
+  label.error {
+    color: white;
+    border: none;
+    text-align: center;
+    margin-bottom: 15px;
+  }
 }
